[package]
name = "bbai2c"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Bit-banged async I2C implementation"
readme = "README.md"
repository = "https://github.com/jothan/bbai2c"

[dependencies]
embedded-hal = { version = "1.0", default-features = false }
embedded-hal-async = { version = "1.0", default-features = false }
futures-lite = { version = "2.6", default-features = false }
